# demo-personalization

./: .dockerignore  .env.example  .gitignore  README.md  core_server.md  personalization.md  pyproject.toml  tinfoil-config.yml
.github/workflows/: tinfoil-release-publish.yml  tinfoil-release.yml
containers/: README.md
containers/control/: Dockerfile
containers/serving/: Dockerfile  Dockerfile.gpu  entrypoint.sh
containers/trainer/: Dockerfile  Dockerfile.gpu
control_server/: app.py  auth.py  config.py  registry.py  serving.py  training.py
cryptobox/: __init__.py
deploy/: README.md  control.Dockerfile  docker-compose.yml  serving.Dockerfile  tinfoil-config.yml  trainer.Dockerfile
environments/personal_style/: README.md  personal_style.py  pyproject.toml
examples/lovecraft/: at_the_mountains_of_madness.txt  chunk.py  corpus.jsonl
scripts/: build_local.sh  debug_judge.py  eval_mock.py  smoke_live.sh
serving_mock/: app.py
tinfoil_llm/: __init__.py
trainer_service/: app.py  runner.py
