[project]
name = "demo-personalization"
version = "0.1.0"
description = "RL personalization demo on Tinfoil confidential compute: train per-user LoRA adapters that write like the user, serve them multi-tenant."
requires-python = ">=3.11"
dependencies = [
    "verifiers",
    "openai>=1.63.0",
    "tinfoil>=0.11.5",
    "datasets",
    "jsonschema",
    "python-dotenv",
    "personal-style",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "cryptography",
]

[tool.uv.sources]
personal-style = { path = "environments/personal_style", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tinfoil_llm", "control_server", "trainer_service", "serving_mock", "cryptobox"]
